# in-config-decoder

./: .gitignore  README.md  main.py  pyproject.toml  upload_wikitext.py
src/: config.py  diff.py  generate_wikitext.py  i18n.py  lua.py  main.py  ol.py  post_process.py  rename_images.py  sound.py  table.py  temp.py  temp2.py  temp3.py  temp4.py
src/perfect/: __about__.py  __init__.py  byte_buf.py  config_table.py  data_tag.py  serializable_object.py  serializable_union.py  type_registry.py  vector.py
